--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,7 +131,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputSenha"
+            android:id="@+id/it_senha"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/blackTie"
