--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <nl.joery.animatedbottombar.AnimatedBottomBar
         android:id="@+id/bottomNavigationView"
@@ -25,19 +25,36 @@
         android:layout_marginBottom="4dp"
         android:background="#FFF"
         app:abb_indicatorAppearance="round"
+        app:abb_indicatorColor="@color/redPrimary"
         app:abb_indicatorHeight="4dp"
         app:abb_indicatorMargin="16dp"
         app:abb_selectedIndex="0"
         app:abb_selectedTabType="text"
-        app:abb_tabs="@menu/bottom_nav"
         app:abb_tabColor="@color/redPrimary"
         app:abb_tabColorSelected="@color/redSecondary"
-        app:abb_indicatorColor="@color/redPrimary"
+        app:abb_tabs="@menu/bottom_nav"
         app:abb_textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/btn_logout"
+        android:layout_width="125dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="378dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginBottom="470dp"
+        android:backgroundTint="@color/redSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_login"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="Logout button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
