--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PomodoroApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.PomodoroApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/whiteOff</item>
         <item name="colorSecondary">@color/black</item>
