--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.TasksFragment">
+    tools:context=".presentation.tasks.TasksFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
